fix: implement flex layout to the cards and adjust spacing for better responsivness
-Wrapped the list and the heading inside a new div for better positioning
-Implemented flexbox layout to the card to make sure the date box always stays on the bottom of the card whenever the height of the card get changed
-Adjusted elements margins

--- a/style.css
+++ b/style.css
@@ -136,10 +136,15 @@ h1 {
   flex-direction: column;
 }
 
+.card-content {
+  display: flex;
+  flex-direction: column;
+}
+
 .card h2 {
   padding-right: 7em;
-  margin-top: 1em;
-  margin-bottom: .7em;
+  margin-top: .2em;
+  margin-bottom: .2em;
   color: #003366;
   font-weight: 500;
 }
